# eced3901-2026-team20

./: .gitignore  Arduino  Arduino_Drop_Cargo.cpp  CMakeLists.txt  README.md  package.xml
Arduino_Alignment_Lidar/: Arduino_Alignment_Lidar.ino
Arduino_Drop_Cargo_/: Arduino_Drop_Cargo_.ino
Arduino_Lights/: Arduino_Lights.ino
config/: ekf.yaml
launch/: Challenge_L_nav.launch.py  Challenge_R.launch.py  Challenge_R_nav.launch.py  lab5L.launch.py  lab5R.launch.py  lab5dt2.launch.py  lab5dt2L.launch.py  lab5dt2R.launch.py  tof_align.launch.py
maps/: Challenge_map_L.pgm  Challenge_map_L.yaml  Challenge_map_R.pgm  Challenge_map_R.yaml  lab4_map.pgm  lab4_map.yaml
params/: nav2_params.yaml  nav2_params_original_backup.yaml  nav2_params_original_backup2.yaml
scripts/: Arduino_Drop_Cargo.cpp  demo_inspection.py  demo_inspection_L.py  demo_inspection_R.py  parallel_align.py  tof_serial_bridge.py
src/: align_parallel_parking (copy).cpp  align_parallel_parking.cpp  align_parallel_parking2.cpp  eced3901_dt1.cpp
worlds/: Challenge_L.world  Challenge_R.world
